[package]
name = "qpow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
num-rational = { path = "../num-rational" }
prime_factorization = "1.0.4"
recursion = { path = "../recursion" }
